deploy/dev/demo-ota-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ota
  namespace: default
  labels:
    app: demo-ota
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-ota
      version: v1
  template:
    metadata:
      labels:
        app: demo-ota
        version: v1
        service: demo-ota
      annotations:
        # OpenTelemetry auto-instrumentation for Java
        instrumentation.opentelemetry.io/inject-java: "true"
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: default
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: demo-ota
          image: gcr.io/cs-poc-sasxbttlzroculpau4u6e2l/demo-ota:v1.2.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "400Mi"
              cpu: 100m
            limits:
              memory: "800Mi"
              cpu: 200m
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-ota
  namespace: default
  labels:
    app: demo-ota
    service: demo-ota
spec:
  selector:
    app: demo-ota
  ports:
    - protocol: TCP
      name: http-8080
      port: 8080
      targetPort: 8080
  type: ClusterIP
