deploy/dev/sp-istio-agent-minimal.yaml
# SERVER模式 - 部署在demo-airline上收集入站流量
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: softprobe-backend
  namespace: istio-system
spec:
  hosts:
  - jaeger.softprobe.ai
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: softprobe-backend-tls
  namespace: istio-system
spec:
  host: jaeger.softprobe.ai
  trafficPolicy:
    tls:
      mode: SIMPLE
